force-app/main/default/objects/FundingBatch__c/FundingBatch__c.object-meta.xml
<CustomObject>
    <description>A request for funds by a local authority for the upgrade of a group of similar houses, specifying home and upgrade types, including costs and numbers for each.</description>
    <label>Batch</label>
    <nameField>
        <displayFormat>ABS-{00000000}</displayFormat>
        <label>ABS Batch Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>