force-app/main/default/objects/FundingBatch__c/fields/ABS_Status__c.field-meta.xml
<CustomField>
    <fullName>ABS_Status__c</fullName>
    <label>ABS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Returned by PSO</fullName>
            </value>
            <value>
                <fullName>Returned by GRL</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>