force-app/main/default/objects/FundingBatch__c/fields/Active_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Active_Baseline__c</fullName>
    <label>Active Baseline</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FundingBaseline__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Batches (Active Baseline)</relationshipLabel>
    <relationshipName>ABS_Batches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>