force-app/main/default/objects/FundingBatch__c/fields/Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of adjustment to be made to offset against an Adjustment Record</description>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>