force-app/main/default/objects/FundingBatch__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <inlineHelpText>This should be the date when the Batch is &quot;Approved&quot;</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>