force-app/main/default/objects/FundingBatch__c/fields/Batch_2nd_FY_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Batch_2nd_FY_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch 2nd FY Disbursement</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Batches (Batch 2nd FY Disbursement)</relationshipLabel>
    <relationshipName>Batches_w_FY2_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>