force-app/main/default/objects/FundingBatch__c/fields/Batch_3rd_FY_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Batch_3rd_FY_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch 3rd FY Disbursement</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Batches (Batch 3rd FY Disbursement)</relationshipLabel>
    <relationshipName>Batches_w_FY3_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>