force-app/main/default/objects/FundingBatch__c/fields/Cost_Increase_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Cost_Increase_Explanation__c</fullName>
    <inlineHelpText>Please outline why the costs on the batch have increased</inlineHelpText>
    <label>Version Changes Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>