force-app/main/default/objects/FundingBatch__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate))) + &apos; &apos; + CASE(MONTH(DATEVALUE(CreatedDate)),1,&apos;Jan&apos;,2,&apos;Feb&apos;,3,&apos;Mar&apos;,4,&apos;Apr&apos;,5,&apos;May&apos;,6,&apos;Jun&apos;,7,&apos;Jul&apos;,8,&apos;Aug&apos;,9,&apos;Sep&apos;,10,&apos;Oct&apos;,11,&apos;Nov&apos;,&apos;Dec&apos;) + &apos; &apos; + TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>