force-app/main/default/objects/FundingBatch__c/fields/Created_Date_MM_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_MM_YYYY__c</fullName>
    <description>Converts the &quot;Created Date&quot; Date/Time field to a Month/Year field, for use in flows.</description>
    <formula>TEXT(MONTH(DATEVALUE( CreatedDate ))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE( CreatedDate )))</formula>
    <label>Created Date (MM/YYYY)</label>
    <type>Text</type>
</CustomField>