force-app/main/default/objects/FundingBatch__c/fields/Created_on_behalf_of_another_LA__c.field-meta.xml
<CustomField>
    <fullName>Created_on_behalf_of_another_LA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is currently not populated correctly</description>
    <label>Created on behalf of another LA</label>
    <type>Checkbox</type>
</CustomField>