force-app/main/default/objects/FundingBatch__c/fields/Declaration_Affirmation__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Affirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirms the batch will follow scheme rules as outlined in a summary declaration/s</inlineHelpText>
    <label>Declaration Affirmation</label>
    <type>Checkbox</type>
</CustomField>