force-app/main/default/objects/FundingBatch__c/fields/Eight_days_before_end_of_month__c.field-meta.xml
<CustomField>
    <fullName>Eight_days_before_end_of_month__c</fullName>
    <formula>DAY(DATE(YEAR(TODAY()), MONTH(TODAY()) + 1, 1) - 1) - DAY(TODAY()) &lt;= 8</formula>
    <label>Eight days before end of month?</label>
    <type>Checkbox</type>
</CustomField>