force-app/main/default/objects/FundingBatch__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>Estimated date that the Batch will finish</description>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>