force-app/main/default/objects/FundingBatch__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>What is the estimated start date of the Batch</description>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>