force-app/main/default/objects/FundingBatch__c/fields/Full_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Batch_Id__c</fullName>
    <formula>Active_Baseline__r.Funding_Award__r.FundingOpportunity.Funding_Scheme_Acronym__c + &quot;-&quot; + Active_Baseline__r.Funding_Award__r.Funding_Award_Acronym__c + &quot;-&quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Batch Id</label>
    <type>Text</type>
</CustomField>