force-app/main/default/objects/FundingBatch__c/fields/Funding_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Funding_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adjustment Record that is being used to reclaim overspend</description>
    <label>Related Funding Adjustment</label>
    <referenceTo>Funding_Adjustment__c</referenceTo>
    <relationshipLabel>Related Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>