force-app/main/default/objects/FundingBatch__c/fields/Funding_Used_In_2nd_FY_Percent__c.field-meta.xml
<CustomField>
    <fullName>Funding_Used_In_2nd_FY_Percent__c</fullName>
    <label>Funding Used In 2nd FY of Batch %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>