force-app/main/default/objects/FundingBatch__c/fields/Funding_Used_In_3rd_FY__c.field-meta.xml
<CustomField>
    <fullName>Funding_Used_In_3rd_FY__c</fullName>
    <label>Funding Used In 3rd FY of Batch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>