force-app/main/default/objects/FundingBatch__c/fields/Funding_Used_percent__c.field-meta.xml
<CustomField>
    <fullName>Funding_Used_percent__c</fullName>
    <label>Funding Used In current FY of Batch %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>