force-app/main/default/objects/FundingBatch__c/fields/Funding_Used_value__c.field-meta.xml
<CustomField>
    <fullName>Funding_Used_value__c</fullName>
    <label>Funding Used In current FY of Batch</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>