force-app/main/default/objects/FundingBatch__c/fields/FY1_Baseline__c.field-meta.xml
<CustomField>
    <fullName>FY1_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch 1st FY Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Batches (FY1 Baseline)</relationshipLabel>
    <relationshipName>Batches_FY1</relationshipName>
    <type>Lookup</type>
</CustomField>