force-app/main/default/objects/FundingBatch__c/fields/FY2_Baseline__c.field-meta.xml
<CustomField>
    <fullName>FY2_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch 2nd FY Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Batches (FY2 Baseline)</relationshipLabel>
    <relationshipName>Batches_FY2</relationshipName>
    <type>Lookup</type>
</CustomField>