force-app/main/default/objects/FundingBatch__c/fields/FY3_Baseline__c.field-meta.xml
<CustomField>
    <fullName>FY3_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch 3rd FY Baseline</label>
    <referenceTo>FundingBaseline__c</referenceTo>
    <relationshipLabel>Batches (Batch 3rd FY Baseline)</relationshipLabel>
    <relationshipName>Batches_FY3</relationshipName>
    <type>Lookup</type>
</CustomField>