force-app/main/default/objects/FundingBatch__c/fields/LA_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LA_Identifier__c</fullName>
    <label>LA Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>