force-app/main/default/objects/FundingBatch__c/fields/OOEP_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>OOEP_Grant_Per_House__c</fullName>
    <formula>OOEP_Grant_Total__c / OOEP_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of energy performance pot per home for owner occupiers for all approved homes within batch</inlineHelpText>
    <label>Grant Per House OOEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>