force-app/main/default/objects/FundingBatch__c/fields/OOEP_Grant_Per_House_All_Approved__c.field-meta.xml
<CustomField>
    <fullName>OOEP_Grant_Per_House_All_Approved__c</fullName>
    <formula>(Active_Baseline__r.OOEP_Grant_Total__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        OOEP_Grant_Total__c, 
        IF(ISBLANK( Previous_Version__r.OOEP_Grant_Total__c ),OOEP_Grant_Total__c, OOEP_Grant_Total__c - Previous_Version__r.OOEP_Grant_Total__c))
    , OOEP_Grant_Total__c)
)

/

(Active_Baseline__r.OOEP_House_Count__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        OOEP_House_Count__c, 
        IF(ISBLANK( Previous_Version__r.OOEP_House_Count__c ),OOEP_House_Count__c, OOEP_House_Count__c - Previous_Version__r.OOEP_House_Count__c))
    , OOEP_House_Count__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of energy performance pot per home for owner occupiers for all approved homes to date + current batch</inlineHelpText>
    <label>Grant Per House All Approved OOEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>