force-app/main/default/objects/FundingBatch__c/fields/OOEP_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>OOEP_Grant_Total__c</fullName>
    <inlineHelpText>Total grant funding via energy performance pot for owner occupied homes within batch</inlineHelpText>
    <label>Grant Total OOEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>