force-app/main/default/objects/FundingBatch__c/fields/OOEP_House_Count__c.field-meta.xml
<CustomField>
    <fullName>OOEP_House_Count__c</fullName>
    <inlineHelpText>Number of owner occupied homes utilising energy performance pot within batch</inlineHelpText>
    <label>House Count OOEP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>