force-app/main/default/objects/FundingBatch__c/fields/OOLCH_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>OOLCH_Grant_Per_House__c</fullName>
    <formula>OOLCH_Grant_Total__c / OOLCH_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of low carbon heat pot per home for owner occupiers within batch</inlineHelpText>
    <label>Grant Per House OOLCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>