force-app/main/default/objects/FundingBatch__c/fields/OOLCH_Grant_Per_House_All_Approved__c.field-meta.xml
<CustomField>
    <fullName>OOLCH_Grant_Per_House_All_Approved__c</fullName>
    <formula>(Active_Baseline__r.OOLCH_Grant_Total__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        OOLCH_Grant_Total__c, 
        IF(ISBLANK( Previous_Version__r.OOLCH_Grant_Total__c ),OOLCH_Grant_Total__c , OOLCH_Grant_Total__c - Previous_Version__r.OOLCH_Grant_Total__c))
    , OOLCH_Grant_Total__c)
)

/

(Active_Baseline__r.OOLCH_House_Count__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        OOLCH_House_Count__c, 
        IF(ISBLANK( Previous_Version__r.OOLCH_House_Count__c ),OOLCH_House_Count__c , OOLCH_House_Count__c - Previous_Version__r.OOLCH_House_Count__c))
    , OOLCH_House_Count__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of low carbon heat pot per home for owner occupiers for all approved homes to date + current batch</inlineHelpText>
    <label>Grant Per House All Approved OOLCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>