force-app/main/default/objects/FundingBatch__c/fields/OOLCH_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>OOLCH_Grant_Total__c</fullName>
    <inlineHelpText>Total grant funding via low carbon heat pot for owner occupied homes within batch</inlineHelpText>
    <label>Grant Total OOLCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>