force-app/main/default/objects/FundingBatch__c/fields/OOLCH_House_Count__c.field-meta.xml
<CustomField>
    <fullName>OOLCH_House_Count__c</fullName>
    <inlineHelpText>Number of owner occupied homes utilising low carbon heat pot within batch</inlineHelpText>
    <label>House Count OOLCH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>