force-app/main/default/objects/FundingBatch__c/fields/Original_Batch__c.field-meta.xml
<CustomField>
    <fullName>Original_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows original batch to be tracked through Adjustment Process</description>
    <label>Original Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Batches (Original Batch)</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>