force-app/main/default/objects/FundingBatch__c/fields/Original_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>