force-app/main/default/objects/FundingBatch__c/fields/Outline_non_recoverable_VAT__c.field-meta.xml
<CustomField>
    <fullName>Outline_non_recoverable_VAT__c</fullName>
    <description>Only answerable if they answer Y to Paid non-recoverable VAT</description>
    <label>Outline non-recoverable VAT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>