force-app/main/default/objects/FundingBatch__c/fields/Paid_in_Previous_Batch__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_Previous_Batch__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Paid in Previous Batch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>