force-app/main/default/objects/FundingBatch__c/fields/Paid_non_recoverable_VAT__c.field-meta.xml
<CustomField>
    <fullName>Paid_non_recoverable_VAT__c</fullName>
    <inlineHelpText>Did you pay non-recoverable VAT on any of the goods and services included in the batch?</inlineHelpText>
    <label>Paid non-recoverable VAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>