force-app/main/default/objects/FundingBatch__c/fields/Paid_Total_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Total_to_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cumalative total  of all versions of a batch to date</description>
    <label>Paid Total to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>