force-app/main/default/objects/FundingBatch__c/fields/Paid_Total_to_Date_inc_current_Batch__c.field-meta.xml
<CustomField>
    <fullName>Paid_Total_to_Date_inc_current_Batch__c</fullName>
    <formula>Paid_Total_to_Date__c + Total_Grant_Fund_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total to Date inc current Batch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>