force-app/main/default/objects/FundingBatch__c/fields/Parent_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated when a record triggered flow on the Batch object fires. When a Batch is created, this field is updated with the related Funding Disbursement record from the Funding Award (for the current month).</description>
    <label>Parent Disbursement</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>