force-app/main/default/objects/FundingBatch__c/fields/Parent_Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Parent_Disbursement_Status__c</fullName>
    <formula>TEXT(Parent_Disbursement__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Disbursement Status</label>
    <type>Text</type>
</CustomField>