force-app/main/default/objects/FundingBatch__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <description>Allows notes to be made describing payment history</description>
    <label>Payment Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>