force-app/main/default/objects/FundingBatch__c/fields/PR100EP_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>PR100EP_Grant_Per_House__c</fullName>
    <formula>PR100EP_Grant_Total__c / PR100EP_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of energy performance pot per private rented (fully funded) within batch</inlineHelpText>
    <label>Grant Per House PR100EP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>