force-app/main/default/objects/FundingBatch__c/fields/PR100EP_House_Count__c.field-meta.xml
<CustomField>
    <fullName>PR100EP_House_Count__c</fullName>
    <inlineHelpText>Number of private rented (fully funded) homes utilising energy performance pot within batch</inlineHelpText>
    <label>House Count PR100EP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>