force-app/main/default/objects/FundingBatch__c/fields/PR100LCH_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>PR100LCH_Grant_Per_House__c</fullName>
    <formula>PR100LCH_Grant_Total__c / PR100LCH_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of low carbon heat pot per private rented (fully funded) home within batch</inlineHelpText>
    <label>Grant Per House PR100LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>