force-app/main/default/objects/FundingBatch__c/fields/PR100LCH_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>PR100LCH_Grant_Total__c</fullName>
    <inlineHelpText>Total grant funding via low carbon heat pot for private rented (fully funded) homes within batch</inlineHelpText>
    <label>Grant Total PR100LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>