force-app/main/default/objects/FundingBatch__c/fields/PR100LCH_House_Count__c.field-meta.xml
<CustomField>
    <fullName>PR100LCH_House_Count__c</fullName>
    <inlineHelpText>Number of private rented (fully funded) homes utilising low carbon heat pot within batch</inlineHelpText>
    <label>House Count PR100LCH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>