force-app/main/default/objects/FundingBatch__c/fields/PR50EP_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>PR50EP_Grant_Per_House__c</fullName>
    <formula>PR50EP_Grant_Total__c /  PR50EP_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of energy performance pot per private rented (50% funded by landlord) for batch only</inlineHelpText>
    <label>Grant Per House PR50EP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>