force-app/main/default/objects/FundingBatch__c/fields/PR50EP_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>PR50EP_Grant_Total__c</fullName>
    <inlineHelpText>Total grant funding via energy performance pot for private rented (50% funded by landlord) homes within batch</inlineHelpText>
    <label>Grant Total PR50EP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>