force-app/main/default/objects/FundingBatch__c/fields/PR50EP_House_Count__c.field-meta.xml
<CustomField>
    <fullName>PR50EP_House_Count__c</fullName>
    <inlineHelpText>Number of private rented (50% funded by landlord) homes utilising energy performance pot within batch</inlineHelpText>
    <label>House Count PR50EP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>