force-app/main/default/objects/FundingBatch__c/fields/PR50LCH_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>PR50LCH_Grant_Per_House__c</fullName>
    <formula>PR50LCH_Grant_Total__c/PR50LCH_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average spend of low carbon heat pot per private rented (50% funded by landlord) home for batch only</inlineHelpText>
    <label>Grant Per House PR50LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>