force-app/main/default/objects/FundingBatch__c/fields/PR50LCH_Grant_Per_House_All_Approved__c.field-meta.xml
<CustomField>
    <fullName>PR50LCH_Grant_Per_House_All_Approved__c</fullName>
    <formula>(Active_Baseline__r.PR50LCH_Grant_Total__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        PR50LCH_Grant_Total__c, 
        IF(ISBLANK( Previous_Version__r.PR50LCH_Grant_Total__c ),PR50LCH_Grant_Total__c , PR50LCH_Grant_Total__c - Previous_Version__r.PR50LCH_Grant_Total__c))
    , PR50LCH_Grant_Total__c)
)

/

(Active_Baseline__r.PR50LCH_House_Count__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        PR50LCH_House_Count__c, 
        IF(ISBLANK( Previous_Version__r.PR50LCH_House_Count__c ),PR50LCH_House_Count__c , PR50LCH_House_Count__c - Previous_Version__r.PR50LCH_House_Count__c))
    , PR50LCH_House_Count__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average spend of low carbon heat pot per private rented (50% funded by landlord) home for all approved homes to date + current batch</inlineHelpText>
    <label>Grant Per House All Approved PR50LCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>