force-app/main/default/objects/FundingBatch__c/fields/Private_50_funded__c.field-meta.xml
<CustomField>
    <fullName>Private_50_funded__c</fullName>
    <label>Private 50% funded</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Tenure__c</field>
        <operation>equals</operation>
        <value>Private rented sector (50% funded)</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>